--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,8 @@
         "url" : "https://www.mygene.info"
     },
     "dumper" : {
+        "data_url" : "https://www.cancergenomeinterpreter.org/data/cgi_biomarkers_latest.zip",
+        "uncompress" : true
     },
     "uploader" : {
         "parser" : "parser:load_data",
